--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
       
       - name: Build app
         run: |
-          pyinstaller --onefile --windowed --name ImageToPDF main.py
+          pyinstaller --clean --noconfirm --name ImageToPDF \
+            --add-data "README.md:." \
+            --windowed \
+            --target-arch x86_64 \
+            --distpath ./dist \
+            --workpath ./build \
+            main.py
       
-      - name: Create release zip
+      - name: Package app
         run: |
           cd dist
           zip -r ImageToPDF-Intel-Mac.zip ImageToPDF.app
