--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,21 +23,48 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip list
+          
+      - name: Check system info
+        run: |
+          python --version
+          arch
+          uname -a
+          echo "Current directory: $PWD"
+          ls -la
       
       - name: Build app
         run: |
-          pyinstaller --clean --noconfirm --name ImageToPDF \
-            --add-data "README.md:." \
+          echo "Starting PyInstaller build..."
+          python -m PyInstaller --version
+          python -m PyInstaller \
+            --clean \
+            --noconfirm \
+            --name ImageToPDF \
             --windowed \
             --target-arch x86_64 \
             --distpath ./dist \
             --workpath ./build \
+            --debug all \
             main.py
-      
+          
+      - name: Check build output
+        run: |
+          echo "Checking build output..."
+          ls -la dist/
+          
       - name: Package app
         run: |
+          echo "Creating zip archive..."
           cd dist
-          zip -r ImageToPDF-Intel-Mac.zip ImageToPDF.app
+          ls -la
+          if [ -d "ImageToPDF.app" ]; then
+            zip -r ImageToPDF-Intel-Mac.zip ImageToPDF.app
+            echo "Zip file created successfully"
+          else
+            echo "Error: ImageToPDF.app directory not found"
+            exit 1
+          fi
       
       - name: Upload artifact
         uses: actions/upload-artifact@v4
