--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,13 @@ jobs:
         with:
           python-version: '3.11'
           architecture: 'x64'
+
+      - name: Activate Xcode CLI tools
+        run: |
+          sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+          xcode-select -p
+          which strip
+          strip --version
       
       - name: Install dependencies
         run: |
@@ -50,28 +57,20 @@ jobs:
             pip list
           "
 
+      - name: Install PyInstaller from source
+        run: |
+          arch -x86_64 /bin/bash -c "
+            git clone https://github.com/pyinstaller/pyinstaller.git
+            cd pyinstaller
+            pip install .
+          "
+
       - name: Build x86_64 PyInstaller bootloader
         run: |
           arch -x86_64 /bin/bash -c "
-            # 安装构建工具
-            brew install python-tk@3.11 || true
-            pip install wheel setuptools
-            
-            # 克隆 PyInstaller 源码
-            git clone https://github.com/pyinstaller/pyinstaller.git
             cd pyinstaller/bootloader
-            
-            # 清理之前的构建
-            python ./waf distclean
-            
-            # 配置构建
-            python ./waf configure --target-arch=64bit --no-universal2
-            
-            # 执行构建
-            python ./waf all
-            
-            # 显示构建结果
-            ls -la build/*/release/*
+            python ./waf distclean configure --target-arch=64bit --no-universal2 &&
+            python ./waf build
           "
           
       - name: Build app
