--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,33 +18,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Check macOS version and architecture
-        run: |
-          sw_vers
-          uname -a
-          arch
-          echo "Setting up x86_64 shell..."
-          arch -x86_64 /bin/bash -c "arch"
-      
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           architecture: 'x64'
-
-      - name: Activate Xcode CLI tools
-        run: |
-          sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
-          xcode-select -p
-          which strip
-          strip --version
       
       - name: Install dependencies
         run: |
           arch -x86_64 /bin/bash -c "
             python -m pip install --upgrade pip
             pip install --no-cache-dir -r requirements.txt
-            pip list
+            pip install 'PyInstaller==6.5.0'
           "
           
       - name: Check system info
@@ -56,22 +41,6 @@ jobs:
             echo 'MACOSX_DEPLOYMENT_TARGET: $MACOSX_DEPLOYMENT_TARGET'
             pip list
           "
-
-      - name: Install PyInstaller from source
-        run: |
-          arch -x86_64 /bin/bash -c "
-            git clone https://github.com/pyinstaller/pyinstaller.git
-            cd pyinstaller
-            pip install .
-          "
-
-      - name: Build x86_64 PyInstaller bootloader
-        run: |
-          arch -x86_64 /bin/bash -c "
-            cd pyinstaller/bootloader
-            python ./waf distclean configure --target-arch=64bit --no-universal2 &&
-            python ./waf build
-          "
           
       - name: Build app
         run: |
@@ -80,7 +49,6 @@ jobs:
             python -m PyInstaller \
               --clean \
               --noconfirm \
-              --target-arch x86_64 \
               --name ImageToPDF \
               --windowed \
               --distpath ./dist \
