使用 PyInstaller 官方预构建的纯 x86_64 bootloader

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,28 @@ jobs:
             pip install --no-cache-dir -r requirements.txt
             pip install 'PyInstaller==6.5.0'
           "
+
+      - name: Replace bootloader with x86_64-only version
+        run: |
+          arch -x86_64 /bin/bash -c "
+            # 下载并解压 x86_64 bootloader
+            curl -L -o bootloader.tar.gz https://github.com/pyinstaller/pyinstaller/releases/download/v6.5.0/pyinstaller-bootloader-darwin-x86_64.tar.gz
+            tar -xzvf bootloader.tar.gz
+            
+            # 获取 PyInstaller bootloader 目录
+            BOOTLOADER_DIR=\$(python -c 'import PyInstaller; print(PyInstaller.__path__[0])')/bootloader/Darwin-64bit
+            
+            # 备份原始 bootloader
+            mv \"\$BOOTLOADER_DIR\" \"\${BOOTLOADER_DIR}.bak\" || true
+            mkdir -p \"\$BOOTLOADER_DIR\"
+            
+            # 复制新的 bootloader
+            cp darwin-x86_64/* \"\$BOOTLOADER_DIR/\"
+            
+            # 检查替换结果
+            ls -la \"\$BOOTLOADER_DIR\"
+            file \"\$BOOTLOADER_DIR/runw\"
+          "
           
       - name: Check system info
         run: |
